--- a/sonasky.yaml
+++ b/sonasky.yaml
@@ -5415,8 +5415,8 @@ swampling:
     - lang: en
       name: Swampling
       description: "This user is a Swampling! [Tags: open-species] by meltymoth"
-droukkit:
+droukkits:
   locales:
     - lang: en
-      name: Droukkit
-      description: "This user is a Droukkit (a radioactive hybrid cave dweller)! [Tags: open-species] by thespecialbeans"
+      name: Droukkits
+      description: "This user is a Droukkits (a radioactive hybrid cave dweller)! [Tags: open-species] by thespecialbeans"
